# koompi-os

./: .gitignore  CONTEXT.md  LICENSE  README.md  UPSTREAM.md  tasks.md
.agent/workflows/: ai-001-integration.md  core-001-architect.md  core-002-packages.md  core-003-snapshots.md  docs-001-writer.md  int-001-devops.md  office-002-formats.md  test-002-rust.md  ui-001-shell.md  ui-002-kde.md
.github/: CONTRIBUTING.md  copilot-instructions.md
.github/workflows/: build-iso.yml  build-packages.yml
docs/: DESIGN.md  KOOMPI-LLM-Plan.md  PRODUCT.md  PROMPT-KOOMPI-AI-CLI.md  PROMPT-KOOMPI-OS.md  README.md  SECURITY_PLAN.md  architecture.md  blueprint.md  btrfs-testing.md  data-ownership-sync-plane.md  data-ownership.md  factory-reset-ux.md  global-menu-arch.html  horizon.md  koompi-browser-prompt.md  koompi-browser.md  legacy-installer-audit.md  naming.md  os-build.md  prd.md  roadmap.md  rust-bar-prototype.md
docs/adr/: 0001-degrade-local-never-silent-cloud.md  0002-subsystem-containment-bwrap-netns.md  0003-foreign-os-apps-macos-out-windows-fidelity-ladder.md  0004-rust-daemons-zig-installer-dual-toolchain.md  0005-package-signing-and-repo-trust-model.md  0006-default-models-bge-m3-and-license-gate.md  0007-aiqml-atomic-extraction-and-edition-agnostic-briefing.md  0008-koompi-cloud-offer-both-operated-and-self-host.md  0009-selendra-anchoring-off-by-default.md  0010-subsystem-two-axis-trust-driven-isolation.md  0011-subsystem-credential-broker.md  0012-subsystem-brokered-interactive-auth.md  0013-l3-bus-is-a-policy-leashed-mcp-host.md  0014-weights-are-signed-packages-no-runtime-registries.md
docs/brainstorm/: _view.html  index.html
docs/brainstorm/css/: bar.css  base.css  desktop-sim.css  widgets.css
docs/brainstorm/js/: app.js  desktop-sim.js
docs/brainstorm/sections/: 00-what-is.html  00a-document-map.html  00b-blueprint.html  01-design-system.html  02-shell-bar.html  03-launcher.html  04-notifications.html  05-quick-settings.html  06-osd.html  07-overview.html  08-widget-overlay.html  09-cheatsheet.html  10-ai-sidebar.html  11-tool-approval.html  12-rag-sources.html  13-memory.html  14-briefing.html  15-session.html  16-ambient-intelligence.html  17-memory-palace.html  18-fluid-continuity.html  19-proactive-os.html  20-appless-computing.html  21-khmer-ai.html  22-data-sovereignty.html  23-cognitive-os.html  24-lifetime-os.html  25-spatial-shell.html  26-index-status.html  27-privacy-dash.html  28-egress-ledger.html  29-settings.html  30-factory-reset.html  31-subsystem.html  32-installer.html  33-khmer.html  34-window-management.html  35-first-boot.html  36-ai-failure-correction.html  37-biometrics-auth.html  (+51 more)
docs/office-suite/: README.md  fileverse-integration.md  roadmap.md  technical-specification.md
docs/subagents/: AGENT_TEMPLATE.md  README.md
docs/subagents/agents/: office-001-architect.md  test-001-automation.md
docs/whitepapers/: KOOMPI-OS-Whitepaper-Part1-Executive.md  KOOMPI-OS-Whitepaper-Part5-Metrics.md
dots/.config/hypr/: hypridle.conf  hyprlock.conf
dots/.config/zshrc.d/: auto-Hypr.sh
installer/: README.md  build.zig  build.zig.zon
installer/src/: archinstall.zig  config.zig  koompi-factory-reset-home.service  main.zig  post_install.sh  proc.zig  reset.zig  reset_home.sh  restore_main.zig  snapper.zig
iso/: packages.x86_64  pacman.conf  profiledef.sh
iso/airootfs/etc/: issue  lsb-release  mkinitcpio.conf  os-release
iso/airootfs/root/: customize_airootfs.sh
iso/grub/: grub.cfg
iso/syslinux/: archiso_head.cfg  archiso_sys-linux.cfg
papers/: KOOMPI-OS-Whitepaper-Part2-Architecture.md  KOOMPI-OS-Whitepaper-Part3-Features.md  KOOMPI-OS-Whitepaper-Part4-Roadmap.md  KOOMPI-OS-Whitepaper-Part6-UX.md
python/koompi-ai/: pyproject.toml
python/koompi-ai/koompi_ai/: __init__.py  ingest.py  intent.py  knowledge.py  llm.py  voice.py
python/koompi-chat/: pyproject.toml
python/koompi-chat/koompi_chat/: __init__.py  main.py
python/koompi-cli/: pyproject.toml
python/koompi-cli/koompi_cli/: __init__.py  main.py
rust/: Cargo.toml
rust/daemon/: Cargo.toml
rust/daemon/src/: dbus.rs  main.rs  service.rs
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs
rust/filemanager/: Cargo.toml
rust/filemanager/src/: app.rs  file_item.rs  icons.rs  main.rs
rust/koompi-daemon/: Cargo.toml
rust/koompi-daemon/src/: dbus.rs  main.rs  service.rs
rust/koompi-ffi/: Cargo.toml
rust/koompi-ffi/src/: lib.rs
rust/koompi-files/: Cargo.toml
rust/koompi-files/src/: app.rs  main.rs
rust/koompi-mesh/: Cargo.toml
rust/koompi-mesh/src/: lib.rs
rust/koompi-packages/: Cargo.toml
rust/koompi-packages/src/: aur.rs  lib.rs  pacman.rs
rust/koompi-settings/: Cargo.toml
rust/koompi-settings/src/: app.rs  main.rs
rust/koompi-settings/src/pages/: about.rs  mod.rs  network.rs
rust/koompi-shell/: Cargo.toml
rust/koompi-shell/src/: main.rs
rust/koompi-snapshots/: Cargo.toml
rust/koompi-snapshots/src/: btrfs.rs  rollback.rs
rust/mesh/: Cargo.toml
rust/mesh/src/: lib.rs
rust/shell/: Cargo.toml
rust/shell/src/: lock_screen.rs  main.rs  notifications.rs  screenshot.rs  ui.rs
rust/snapshots/: Cargo.toml
rust/snapshots/src/: lib.rs  retention.rs
rust/system-settings/: Cargo.toml
rust/system-settings/src/: app.rs  main.rs
rust/system-settings/src/pages/: appearance.rs  display.rs  sound.rs
scripts/: build-iso.sh  test-vm.sh
sdata/dist-arch/: install-deps.sh  uninstall-deps.sh
sdata/dist-arch/koompi-agent-memd/: PKGBUILD
sdata/dist-arch/koompi-audio/: PKGBUILD
sdata/dist-arch/koompi-backlight/: PKGBUILD
sdata/dist-arch/koompi-base/: PKGBUILD
sdata/dist-arch/koompi-basic/: PKGBUILD
sdata/dist-arch/koompi-bibata-modern-classic-bin/: PKGBUILD
sdata/dist-arch/koompi-branding/: PKGBUILD
sdata/dist-arch/koompi-desktop/: PKGBUILD
sdata/dist-arch/koompi-desktop-hyprland/: PKGBUILD
sdata/dist-arch/koompi-desktop-kde/: PKGBUILD
sdata/dist-arch/koompi-fonts-themes/: PKGBUILD
sdata/dist-arch/koompi-hyprland/: PKGBUILD
sdata/dist-arch/koompi-hyprland-config/: PKGBUILD
sdata/subcmd-install/: 2.setups.sh
(+135 files in other folders)
