[workspace]
resolver = "2"
members = ["daemon", "snapshots", "packages", "ffi"]
# Note: shell, filemanager, system-settings → koompi-shell branch
# Note: mesh → koompi-edu branch (classroom features)

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/koompi/koompi-os"
authors = ["KOOMPI Team <dev@koompi.org>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# D-Bus
zbus = "4.0"

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
strip = true
