[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koompi-chat"
version = "0.1.0"
description = "AI Chat Assistant for KOOMPI OS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "KOOMPI Team", email = "dev@koompi.org" }
]
dependencies = [
    "PySide6>=6.6.0",
    "koompi-ai",
    "qt-material>=2.14",
    "qasync>=0.27.1",
]

[project.scripts]
koompi-chat = "koompi_chat.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
