[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koompi-cli"
version = "0.1.0"
description = "Command-line interface for KOOMPI OS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "KOOMPI Team", email = "dev@koompi.org" }
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "koompi-ai",
]

[project.scripts]
koompi = "koompi_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
