[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KOOMPI OS system daemon"

[[bin]]
name = "koompid"
path = "src/main.rs"

[dependencies]
snapshots = { path = "../snapshots" }
packages = { path = "../packages" }
mesh = { path = "../mesh" }

tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
zbus.workspace = true
toml.workspace = true
sysinfo = "0.30"
