[package]
name = "ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for KOOMPI OS core"

[lib]
name = "koompi_core"
crate-type = ["cdylib"]

[dependencies]
snapshots = { path = "../snapshots" }
packages = { path = "../packages" }
mesh = { path = "../mesh" }

pyo3.workspace = true
tokio.workspace = true
serde_json.workspace = true
