[package]
name = "koompi-mesh"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Classroom mesh networking for KOOMPI OS"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
