[package]
name = "koompi-packages"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Package management for KOOMPI OS"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
