[package]
name = "koompi-snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Btrfs snapshot management for KOOMPI OS"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true
