[package]
name = "shell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "koompi-shell"
path = "src/main.rs"

[dependencies]
smithay = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
tiny-skia = "0.11"
fontdue = "0.8"
whoami = "1.5"
dirs = "5.0"
